[gd_scene load_steps=8 format=3 uid="uid://d0exira3cfsbw"]

[ext_resource type="Script" path="res://addons/inventory-system/ui/slot_ui.gd" id="1_efrhy"]
[ext_resource type="Theme" uid="uid://b7vs6rvub08n3" path="res://addons/inventory-system/demos/ui/themes/theme.tres" id="1_hssy3"]
[ext_resource type="Texture2D" uid="uid://chkax7oefnn0c" path="res://addons/inventory-system/demos/assets/uipack-rpg/PNG/buttonSquare_grey.png" id="3_bmi74"]
[ext_resource type="Texture2D" uid="uid://27s26vu2drcs" path="res://addons/inventory-system/demos/assets/uipack-rpg/PNG/buttonSquare_beige.png" id="3_ulm20"]
[ext_resource type="Texture2D" uid="uid://bw4m1qyegtyin" path="res://addons/inventory-system/demos/assets/icons/branch.png" id="5_y4g0o"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ii3o2"]
texture = ExtResource("3_bmi74")
region_rect = Rect2(0, 0, 45, 49)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_b3mp4"]
texture = ExtResource("3_ulm20")
region_rect = Rect2(0, 0, 45, 49)

[node name="SlotUI" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(52, 52)
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_hssy3")
script = ExtResource("1_efrhy")

[node name="Selected" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 54.0
offset_bottom = 54.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ii3o2")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(48, 48)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "A Slot"
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_b3mp4")

[node name="Category Icon" type="TextureRect" parent="."]
modulate = Color(0.25098, 0.25098, 0.25098, 0.501961)
texture_filter = 1
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_y4g0o")

[node name="Item Icon" type="TextureRect" parent="."]
texture_filter = 1
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -15.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2

[node name="Amount" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -32.0
offset_right = -6.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "2"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
